--- a/PAGES/4a0_packages/index.html
+++ b/PAGES/4a0_packages/index.html
@@ -2030,7 +2030,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2042,7 +2042,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="packages" class="scrollspy">
+<section id="packages" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2054,7 +2054,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="loading_packages_and_calling_functions" class="scrollspy section-bg-color">
+<section id="loading_packages_and_calling_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2088,7 +2088,7 @@ mean&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="built-in_functions" class="scrollspy">
+<section id="built-in_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2166,7 +2166,7 @@ M834 80h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">â€
     </div>
   </div>
 </section>
-<section id="why_using_import_if_its_more_verbose" class="scrollspy section-bg-color">
+<section id="why_using_import_if_its_more_verbose" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2180,7 +2180,7 @@ M834 80h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">â€
     </div>
   </div>
 </section>
-<section id="names_of_functions_and_approaches_to_loading_packages_optional" class="scrollspy">
+<section id="names_of_functions_and_approaches_to_loading_packages_optional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2248,7 +2248,7 @@ average&#40;x&#41;</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\4a1_define_func" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  Â© Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  Â© Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
