--- a/PAGES/6b_mutating_views/index.html
+++ b/PAGES/6b_mutating_views/index.html
@@ -2030,7 +2030,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2045,7 +2045,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="replacing_slices_by_vectors" class="scrollspy">
+<section id="replacing_slices_by_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2113,7 +2113,7 @@ x&#91;:&#93; &#61; x .* 10</code></pre>
     </div>
   </div>
 </section>
-<section id="broadcasting_over" class="scrollspy section-bg-color">
+<section id="broadcasting_over" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2229,7 +2229,7 @@ y  &#61; x&#91;x .≥ 3&#93; .* 10    # this creates a new variable &#39;y&#39;<
     </div>
   </div>
 </section>
-<section id="filling_vectors_with_values_through_for-loops" class="scrollspy">
+<section id="filling_vectors_with_values_through_for-loops" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2336,7 +2336,7 @@ end</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6c_inplace" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
