--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -2030,7 +2030,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2057,7 +2057,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
     </div>
   </div>
 </section>
-<section id="describing_the_scenario" class="scrollspy">
+<section id="describing_the_scenario" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2112,7 +2112,7 @@ money_per_view  &#61; rand&#40;2:6, nr_videos&#41;                         # per
     </div>
   </div>
 </section>
-<section id="broadcasting_over_a_list_of_functions" class="scrollspy section-bg-color">
+<section id="broadcasting_over_a_list_of_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2190,7 +2190,7 @@ stats_views &#61; round.&#40;Int64, stats_views&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="boolean_indexing" class="scrollspy">
+<section id="boolean_indexing" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2222,7 +2222,7 @@ proportion_viral_lucrative &#61; sum&#40;is_viral_lucrative&#41; / sum&#40;is_vi
     </div>
   </div>
 </section>
-<section id="functions" class="scrollspy section-bg-color">
+<section id="functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2320,7 +2320,7 @@ firstdays        &#61; stats_subset&#40;views_per_video, money_per_video, is_fir
     </div>
   </div>
 </section>
-<section id="data_subsets" class="scrollspy">
+<section id="data_subsets" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2423,7 +2423,7 @@ end</code></pre> </div></div>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6e_useful_funs" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
