--- a/PAGES/8c_staticVectors/index.html
+++ b/PAGES/8c_staticVectors/index.html
@@ -1987,7 +1987,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2004,7 +2004,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="creating_static_vectors" class="scrollspy">
+<section id="creating_static_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2081,7 +2081,7 @@ slice2 &#61; sx&#91;&#91;1,2&#93;&#93;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="svectors_dont_allocate_and_are_faster" class="scrollspy section-bg-color">
+<section id="svectors_dont_allocate_and_are_faster" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2200,7 +2200,7 @@ foo&#40;x&#41; &#61; sum&#40;a -&gt; 10 &#43; 2a &#43;  3a^2, x&#41;
     </div>
   </div>
 </section>
-<section id="svector_type_and_its_mutable_variant" class="scrollspy">
+<section id="svector_type_and_its_mutable_variant" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2277,7 +2277,7 @@ mx &#61; similar&#40;sx&#41;        # it defines an MVector with undef elements<
     </div>
   </div>
 </section>
-<section id="using_static_vectors" class="scrollspy section-bg-color">
+<section id="using_static_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2376,7 +2376,7 @@ end
     </div>
   </div>
 </section>
-<section id="the_number_of_elements_is_part_of_svectors_type" class="scrollspy">
+<section id="the_number_of_elements_is_part_of_svectors_type" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2451,7 +2451,7 @@ end
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8d_lazy" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
