--- a/links/index.html
+++ b/links/index.html
@@ -1877,13 +1877,10 @@ section{
 </li>
 <li><p><a href="https://mirror.rcg.sfu.ca/mirror/CRAN/">R</a><br/></p>
 </li>
-<li><p><a href="https://www.python.org/downloads/">Python</a><br/></p>
-</li>
-<li><p><a href="https://docs.anaconda.com/anaconda/install/index.html">Anaconda</a><br/></p>
+<li><p><a href="https://www.python.org/downloads/">Python</a></p>
 </li>
 </ul>
- <span style="visibility:hidden;"> ============================================================================================================ </span>
-<p>      </div>
+<p> <div style="visibility:hidden; margin-bottom:-1em;"> ======================================================================================================================================== </div>       </div>
     </div>
   </div>
 </section>
@@ -1904,8 +1901,7 @@ section{
 <li><p><a href="https://www.sublimetext.com/">Sublime</a><br/></p>
 </li>
 </ul>
- <span style="visibility:hidden;"> ============================================================================================================ </span>
-<p>      </div>
+<p> <div style="visibility:hidden; margin-bottom:-1em;"> ======================================================================================================================================== </div>       </div>
     </div>
   </div>
 </section>
@@ -1922,8 +1918,7 @@ section{
 <li><p><a href="https://stackoverflow.com/questions/tagged/julia">Julia StackOverFlow</a><br/></p>
 </li>
 </ul>
- <span style="visibility:hidden;"> ============================================================================================================ </span>
-<p>      </div>
+<p> <div style="visibility:hidden; margin-bottom:-1em;"> ======================================================================================================================================== </div>       </div>
     </div>
   </div>
 </section>
@@ -1942,7 +1937,7 @@ section{
 <li><p><a href="https://chat.lmsys.org/">chat.lmsys.org</a>: It showcases several open-source chatbots. It&#39;s still in beta and quite underdeveloped.</p>
 </li>
 </ul>
-<p> <span style="visibility:hidden;"> ============================================================================================================ </span>       </div>
+<p> <div style="visibility:hidden; margin-bottom:-1em;"> ======================================================================================================================================== </div>       </div>
     </div>
   </div>
 </section>
