--- a/PAGES/1a_installation/index.html
+++ b/PAGES/1a_installation/index.html
@@ -2030,7 +2030,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="installing_julia" class="scrollspy section-bg-color">
+<section id="installing_julia" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2042,7 +2042,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_an_editor" class="scrollspy">
+<section id="installing_an_editor" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2056,7 +2056,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_r_and_python_optional" class="scrollspy section-bg-color">
+<section id="installing_r_and_python_optional" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2067,7 +2067,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="julias_resources_for_help" class="scrollspy">
+<section id="julias_resources_for_help" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2096,7 +2096,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\2a_basics" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
