--- a/PAGES/2a_basics/index.html
+++ b/PAGES/2a_basics/index.html
@@ -2030,7 +2030,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2040,7 +2040,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="using_julia_in_vs_code" class="scrollspy">
+<section id="using_julia_in_vs_code" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2061,7 +2061,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="adding_comments_in_a_script" class="scrollspy section-bg-color">
+<section id="adding_comments_in_a_script" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2081,7 +2081,7 @@ x &#61; 2   # &#96;x&#61;2&#96; is run, but anything after &#96;#&#96; won&#39;t
     </div>
   </div>
 </section>
-<section id="paths_of_files_and_folders" class="scrollspy">
+<section id="paths_of_files_and_folders" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2102,7 +2102,7 @@ joinpath&#40;&quot;C:/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></p
     </div>
   </div>
 </section>
-<section id="executing_code_from_a_file" class="scrollspy section-bg-color">
+<section id="executing_code_from_a_file" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2150,7 +2150,7 @@ joinpath&#40;&quot;C:/&quot;, &quot;user&quot;, &quot;julia&quot;&#41;</code></p
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\1c_vscode" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
