--- a/PAGES/6c1_tuples_and_namedtuples/index.html
+++ b/PAGES/6c1_tuples_and_namedtuples/index.html
@@ -2030,7 +2030,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2042,7 +2042,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="keys_and_values" class="scrollspy section-bg-color">
+<section id="keys_and_values" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2076,7 +2076,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="the_type_symbol" class="scrollspy">
+<section id="the_type_symbol" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2103,7 +2103,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="named_tuples" class="scrollspy section-bg-color">
+<section id="named_tuples" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2179,7 +2179,7 @@ tup &#61; &#40;x, &#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="dictionaries" class="scrollspy">
+<section id="dictionaries" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2265,7 +2265,7 @@ keys_from_dict &#61; collect&#40;keys&#40;dict&#41;&#41;</code></pre> </div></di
     </div>
   </div>
 </section>
-<section id="creating_named_tuples_and_dictionaries_through_variables" class="scrollspy section-bg-color">
+<section id="creating_named_tuples_and_dictionaries_through_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2383,7 +2383,7 @@ nt &#61; NamedTuple&#40;vector_keys_values&#41;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="destructuring_optional" class="scrollspy">
+<section id="destructuring_optional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2632,7 +2632,7 @@ end</code></pre>
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6f_pipes" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
