--- a/PAGES/6c_inplace/index.html
+++ b/PAGES/6c_inplace/index.html
@@ -2030,7 +2030,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2041,7 +2041,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="in-place_functions" class="scrollspy section-bg-color">
+<section id="in-place_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2146,7 +2146,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="built-in_in-place_functions" class="scrollspy">
+<section id="built-in_in-place_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2225,7 +2225,7 @@ map&#33;&#40;a -&gt; a^2, output, x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="adding_or_removing_elements_of_a_vector" class="scrollspy section-bg-color">
+<section id="adding_or_removing_elements_of_a_vector" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2291,7 +2291,7 @@ deleteat&#33;&#40;x, &#91;1,3&#93;&#41;     # &#91;1,3&#93; are the indices to b
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\6c1_tuples_and_namedtuples" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
