--- a/PAGES/8b1_views/index.html
+++ b/PAGES/8b1_views/index.html
@@ -1987,7 +1987,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -1999,7 +1999,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="views_of_slices" class="scrollspy">
+<section id="views_of_slices" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2056,7 +2056,7 @@ foo&#40;x&#41; &#61; @views sum&#40;x&#91;x .&gt; 0.5&#93;&#41;
     </div>
   </div>
 </section>
-<section id="copying_data_may_be_faster" class="scrollspy section-bg-color">
+<section id="copying_data_may_be_faster" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2098,7 +2098,7 @@ foo&#40;x&#41; &#61; max.&#40;@view&#40;x&#91;1:2:length&#40;x&#41;&#93;&#41;, 0
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Section</a></span>
        <span class="right-text"><a href="/julia_book/PAGES\8b2_preallocations" class="nextPage">Next Section <img src="/julia_book/assets/icons/next-page.png"
         style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-    <span class="center-text">  © Martin Alfaro <br>Last Modified November 12, 2023 </span>  
+    <span class="center-text">  © Martin Alfaro <br>Last Modified November 13, 2023 </span>  
   </div>
 <!-- </p>  -->
 </footer>
